[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Square.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.16667, 8.5 )

[node name="Player" type="Sprite"]
modulate = Color( 0.72549, 0.0862745, 0.627451, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="hitbox" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="reload_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="restart_timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="restart_timer" to="." method="_on_restart_timer_timeout"]
